--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head> 
     <body>
         <hi>RJ Lemon's CSCE 190 site</hi>
-
+<!---- problem staement assignment-->
 <section class="assignment">
     <a href="files/Problem Statement Traffic Control.pdf"><img src="images/problem statement.png"></a>
 <section class="ass-details">
@@ -16,6 +16,20 @@
     
 </section>
 </section>
+<!--affinity diagram assignment-->
+<section class="assignment">
+    <a href="files/affinitydiagram.pdf"><img src="images/afiinitydiagram.png"></a>
+<section class="ass-details">
+    <a href="files/affinitydiagram.pdf"><h2>Affinity Diagram</h2></a>
+    <p>
+        My group worked together to brainstorm all potential app uses.
+    </p>
+    
+</section>
+</section>
+
+
+
     </body>
 
 </html>
