--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
     <head>
         <title>CSCE 190: RJ Lemon</title>
+        <link rel="stylesheet" href="styles.css">
     </head> 
     <body>
-        <hi>RJ Lemon's CSCE 190 site</hi>
+        <h1>RJ Lemon's CSCE 190 site</h1>
+
 <!---- problem staement assignment-->
 <section class="assignment">
     <a href="files/Problem Statement Traffic Control.pdf"><img src="images/problem statement.png"></a>
@@ -27,9 +29,5 @@
     
 </section>
 </section>
-
-
-
-    </body>
-
+</body>
 </html>
