--- a/index.html
+++ b/index.html
@@ -1,2 +1,17 @@
-hello rj!
+<!DOCTYPE html>
+<html lang="eng">
+   <h1>Csce 242 Web Applications</h1> 
+   <h2><b>RJ Lemon</b></h2>
+<p>
+    Using web technologies to support client-server computing. Implementation of client-server applications.
+</p>
+<h3>
+assignments
+</h3>
+<ul>
+<li>
+    Assignment 1
+</li>
+</ul>
+</html>
 
