--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     Using web technologies to support client-server computing. Implementation of client-server applications.
 </p>
 <h3>
-assignments
+Assignments
 </h3>
 <ul>
 <li>
-    Assignment 1
+    <a href="assignments/assignment 1/index.html"></a>
 </li>
 </ul>
 </html>
