--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Assignments
 </h3>
 <ul>
 <li>
-    <a href="assignments/assignment 1/index.html"></a>
+    <a href="assignments/assignment 1/index.html">Assignments</a>
 </li>
 </ul>
 </html>
