--- a/assignments/assignment 1/index.html
+++ b/assignments/assignment 1/index.html
@@ -21,4 +21,21 @@ Polar Bear information
     </p>
     <img src="images/polar bear 1.jpeg" alt="Doesnt Work" /><br/>
     <img src="images/polar bear 2.jpeg" alt="Doesnt Work" /><br/>
+<h2>
+    Prefered Foods 
+</h2>
+    <ul>
+    <li>
+Ringed Seals
+    </li>
+    <li>
+  Walrus
+    </li>
+    <li>
+    Narwhal   
+    </li>
+</ul>
+
+
+    
 </html>
