--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@ Assignments
 </h3>
 <ul>
 <li>
-    <a href="assignments/assignment 1/index.html">Assignments</a>
+    <a href="assignments/assignment 1/index.html">Assignments 1</a>
 </li>
 </ul>
+
 </html>
 
