--- a/assignments/assignment 1/index.html
+++ b/assignments/assignment 1/index.html
@@ -4,9 +4,9 @@
         RJ Lemon CSCE 242
     </p>
     <head>
-        <title>
+        <h3>
 Polar Bear information
-        </title>
+        </h3>
     </head>
     <h1>
         Diet
@@ -29,7 +29,40 @@ Polar Bear information
 <li>Walrus</li>
 <li>Narwhal</li>
 </ul>
-
+<table>
+    <tr>
+        <th>
+Animal 
+        </th>
+        <th>
+Description
+        </th>
+    </tr>
+    <tr>
+        <td>
+            Ringed Seals
+        </td>
+        <td>
+            a small head; a short cat-like snout; and a plump body.
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Walrus
+        </td>
+        <td>
+            wrinkled brown and pink skin, long, coarse whiskers, flat flippers, and lots of blubber
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Narwhal
+        </td>
+        <td>
+            straight tooth (or tusk) that protrudes two to three meters out of the upper left jaw.
+        </td>
+    </tr>
+</table>
 
     
 </html>
