--- a/assignments/assignment 1/index.html
+++ b/assignments/assignment 1/index.html
@@ -4,13 +4,13 @@
         RJ Lemon CSCE 242
     </p>
     <head>
-        <h3>
+        <h1>
 Polar Bear information
-        </h3>
+        </h1>
     </head>
-    <h1>
+    <h2>
         Diet
-    </h1>
+    </h2>
     <p>
         Polar bears are the most carnivorous of all the bear species. They metabolize fat more efficiently than protein, and their energy-rich diet enables them to have a larger body size than other bears. Polar bears feed primarily on ringed seals, but will also eat bearded seals, harp seals, hooded and harbor seals, when available.
         Larger prey species such as walrus, narwhal and beluga are occasionally hunted. Polar bears will readily scavenge on marine mammal carcasses.
@@ -21,9 +21,9 @@ Polar Bear information
     </p>
     <img src="images/polar bear 1.jpeg" alt="Doesnt Work" />
     <img src="images/polar bear 2.jpeg" alt="Doesnt Work" />
-<h2>
+<h3>
     Prefered Foods 
-</h2>
+</h3>
 <ul>
  <li>Ringed Seals</li>
 <li>Walrus</li>
@@ -43,7 +43,7 @@ Description
             Ringed Seals
         </td>
         <td>
-            a small head; a short cat-like snout; and a plump body.
+              a small head; a short cat-like snout; and a plump body.
         </td>
     </tr>
     <tr>
@@ -63,6 +63,8 @@ Description
         </td>
     </tr>
 </table>
+<a href="https://polarbearagreement.org/polar-bear-biology/diet#:~:text=They%20metabolize%20fat%20more%20efficiently,and%20harbor%20seals%2C%20when%20available.">Polar Bear information</a>
+<a href="https://www.arcticwwf.org/wildlife/polar-bear/polar-bear-diet/">Diet information</a>
 
     
 </html>
