--- a/assignments/assignment 1/index.html
+++ b/assignments/assignment 1/index.html
@@ -4,9 +4,9 @@
         RJ Lemon CSCE 242
     </p>
     <head>
-        <h1>
+        <title>
 Polar Bear information
-        </h1>
+        </title>
     </head>
     <h2>
         Diet
@@ -63,7 +63,7 @@ Description
         </td>
     </tr>
 </table>
-<a href="https://polarbearagreement.org/polar-bear-biology/diet#:~:text=They%20metabolize%20fat%20more%20efficiently,and%20harbor%20seals%2C%20when%20available.">Polar Bear information</a>
+<a href="https://defenders.org/wildlife/polar-bear?s_src=3WDW1900PJXXX&s_subsrc=googlegrant&gad_source=1&gclid=CjwKCAiA44OtBhAOEiwAj4gpOfVqA9FpHWzcyr2GIjzfvCRRdLubpvyXIQtWEWZOd8Tq00DHGn2t0BoCtO4QAvD_BwE">Polar Bear information</a>
 <a href="https://www.arcticwwf.org/wildlife/polar-bear/polar-bear-diet/">Diet information</a>
 
     
