--- a/assignments/assignment 1/index.html
+++ b/assignments/assignment 1/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="eng">
-    <p>
-        RJ Lemon CSCE 242
-    </p>
+   
     <head>
-        <title>
-Polar Bear information
-        </title>
+        <title>Polar Bear information</title>
+        <!--RJ Lemon CSCE 242-->
     </head>
     <h2>
         Diet
