--- a/assignments/assignment 1/index.html
+++ b/assignments/assignment 1/index.html
@@ -16,8 +16,8 @@
         Polar bears will also eat birds, fish, vegetation and kelp, although the caloric contribution of such foods likely contributes little to their overall sustenance.
         Bears that remain on land during the summer months rely primarily on their fat reserves and conserve their energy by remaining inactive most of the time.Polar bears will also eat birds, fish, vegetation and kelp, although the caloric contribution of such foods likely contributes little to their overall sustenance.Food can be hard to come by for polar bears for much of the year. The bear puts on most of its yearly fat reserves between late April and mid-July to maintain its weight in the lean seasons.
     </p>
-<p><img src="images/polarbear1.avif"/>
-<img src="images/polabear2.jpeg"/></p>
+<img src="images/polarbear1.avif"/>
+<img src="images/polarbear2.jpeg"/>
 <h3>
     Prefered Foods 
 </h3>
