--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="eng">
+    <head>
+       <link rel="stylesheet" href="styles.css"/>
+    </head>
    <h1>Csce 242 Web Applications</h1> 
    <h2><b>RJ Lemon</b></h2>
 <p>
@@ -10,7 +13,10 @@ Assignments
 </h3>
 <ul>
 <li>
-    <a href="assignments/assignment 1/index.html">Assignments 1</a>
+    <a href="assignments/assignment 1/index.html">Assignment 1</a>
+</li>
+<li>
+    <a href="assignments/assignment 2/index.html">Assignment 2</a>
 </li>
 </ul>
 
