--- a/assignments/assignment 2/index.html
+++ b/assignments/assignment 2/index.html
@@ -3,4 +3,71 @@
     <head>
        <link rel="stylesheet" href="styles.css"/>
     </head>
+    <h1>
+        Autumn! facts
+    </h1>
+    <h2>
+     Basic Information
+    </h2>
+    <p>
+        Benjamin Clarence Phillips Jr. (born June 24, 1998), known professionally as Autumn (stylized as Autumn!), is an American rapper and record producer. He initially started as a producer under the name TrapGodBenji. He is best known for popularizing the pluggnb subgenre alongside fellow artists Summrs and Kankan
+    </p>
+    <P>
+        Recent Albums: Antagonist!,Golden Child, Chapter 3,Midnight Club,Midnight Club: Dub Edition
+    </P>
+    <table>
+        <tr>
+            <th>
+    Mixtape  
+            </th>
+            <th>
+    Best Song
+            </th>
+            <th>
+    Release Date
+            </th>
+        </tr>
+       <td>
+    4
+       </td>
+       <td>
+Christians
+       </td>
+       <td>
+10/19/2019
+       </td>
+        <tr>
+    <td>
+        Ils Verront
+    </td>
+    <td>
+Girl from the Club!
+    </td>
+    <td>
+8/26/2020
+    </td>
+        </tr>
+    <tr>
+    <td>
+Solitary
+    </td>
+    <td>
+Probably!    
+    </td>
+    <td>
+12/2/2020     
+    </td>
+    </tr>
+    <tr>
+       <td>
+Golden Child, Chapter 1
+       </td>
+       <td>
+Not 3 Not 2!
+       </td>
+       <td>
+6/12/2021
+       </td>
+    </tr>
+    </table>
 </html>
