--- a/assignments/assignment 2/index.html
+++ b/assignments/assignment 2/index.html
@@ -69,5 +69,18 @@ Not 3 Not 2!
 6/12/2021
        </td>
     </tr>
+    <tr>
+        <td>
+Golden Child, Chapter 2
+        </td>
+        <td>
+Intro        
+        </td>
+        <td>
+8/26/2022       
+        </td>
+    </tr>
     </table>
+    <img src="images/autumn 1.jpeg"/>
+    <img src="images/autumn 2.jpeg"/>
 </html>
