--- a/assignments/assignment 2/index.html
+++ b/assignments/assignment 2/index.html
@@ -3,6 +3,7 @@
     <head>
        <link rel="stylesheet" href="styles.css"/>
     </head>
+    <body>
     <h1>
         Autumn! facts
     </h1>
@@ -83,4 +84,5 @@ Intro
     </table>
     <img src="images/autumn 1.jpeg"/>
     <img src="images/autumn 2.jpeg"/>
+    </body>
 </html>
