--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
    <h1>Csce 242 Web Applications</h1> 
    <h2><b>RJ Lemon</b></h2>
-<p>
+<p class="special">
     Using web technologies to support client-server computing. Implementation of client-server applications.
 </p>
 <h3>
