--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
    <h1>Csce 242 Web Applications</h1> 
    <h2><b>RJ Lemon</b></h2>
 <p class="special">
-    Using <strong id="big">web technologies to support client-server computing. Implementation of client-server applications.
-</strong>
+    Using <strong id="big">web technologies</strong> to support client-server computing. Implementation of client-server applications.
+
 </p>
 <h3>
 Assignments
