--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
        <link rel="stylesheet" href="styles.css"/>
     </head>
+    <body>
+        <div id="content">
    <h1>Csce 242 Web Applications</h1> 
    <h2><b>RJ Lemon</b></h2>
 <p class="special">
@@ -19,7 +21,8 @@ Assignments
 <li>
     <a href="assignments/assignment 2/index.html">Assignment 2</a>
 </li>
-</ul>
-
+</ul> 
+</div>
+</body>
 </html>
 
