--- a/assignments/assignment 2/index.html
+++ b/assignments/assignment 2/index.html
@@ -7,6 +7,13 @@
     <h1>
         Autumn! facts
     </h1>
+    <nav id="main-nav">
+        <a href="index.html">Home</a>
+        <a href="#">About</a>
+        <a href="#">Pictures</a>
+        <a href="#">News</a>
+        <a href="#">Contact Me</a>
+    </nav>
     <h2>
      Basic Information
     </h2>
