--- a/assignments/assignment 2/index.html
+++ b/assignments/assignment 2/index.html
@@ -4,6 +4,7 @@
        <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
+        <div id="content">
     <h1>
         Autumn! facts
     </h1>
@@ -21,7 +22,7 @@
         Benjamin Clarence Phillips Jr. (born June 24, 1998), known professionally as Autumn (stylized as Autumn!), is an American rapper and record producer. He initially started as a producer under the name TrapGodBenji. He is best known for popularizing the pluggnb subgenre alongside fellow artists Summrs and Kankan
     </p>
     <P>
-        Recent Albums: Antagonist!,Golden Child, Chapter 3,Midnight Club,Midnight Club: Dub Edition
+       <strong> Recent Albums</strong>: Antagonist!,Golden Child, Chapter 3,Midnight Club,Midnight Club: Dub Edition
     </P>
     <table>
         <tr>
@@ -91,5 +92,6 @@ Intro
     </table>
     <img src="images/autumn 1.jpeg"/>
     <img src="images/autumn 2.jpeg"/>
-    </body>
+    </div>
+</body>
 </html>
