--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@ Assignments
 <li>
     <a href="assignments/assignment 2/index.html">Assignment 2</a>
 </li>
+<li>
+    <a href="assignments/assignment 3/index.html">Assignment 3</a>
+</li>
 </ul> 
 </div>
 </body>
