--- a/assignments/assignment 3/index.html
+++ b/assignments/assignment 3/index.html
@@ -20,6 +20,7 @@
         </header>
         <main id="page-content">
 <h2> Content </h2>
+<div class="flex-container">
 <section class="content-section">
     <h3>First Section</h3>
     <p>
@@ -30,6 +31,7 @@
     <h3>Second Section</h3>
     <p>Scelerisque eleifend donec pretium vulputate sapien. Arcu ac tortor dignissim convallis aenean. Sed tempus urna et pharetra pharetra. Rutrum tellus pellentesque eu tincidunt tortor. Placerat vestibulum lectus mauris ultrices eros in cursus turpis massa. Ipsum consequat nisl vel pretium lectus quam. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus et. Mattis aliquam faucibus purus in massa tempor nec. Urna porttitor rhoncus dolor purus non enim praesent elementum facilisis. Tellus pellentesque eu tincidunt tortor aliquam. A pellentesque sit amet porttitor eget dolor.</p>
 </section>
+</div>
         </main>
         <footer id="main-footer">
 <p>
