--- a/assignments/assignment 3/index.html
+++ b/assignments/assignment 3/index.html
@@ -10,10 +10,10 @@
 <h1>New website</h1>
 <nav id="main-nav">
     <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Pictures</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="https://wiby.me/surprise/">Random Link 1</a></li>
+        <li><a href="https://wiby.me/surprise/">Random Link 2</a></li>
+        <li><a href="https://wiby.me/surprise/">Random Link 3</a></li>
+        <li><a href="https://wiby.me/surprise/">Random Link 4</a></li>
     </ul>
 
 </nav>
@@ -22,6 +22,13 @@
 <h2> Content </h2>
 <div class="flex-container">
 <section class="content-section">
+    <h3>Links</h3>
+    <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Pictures</a></li>
+        <li><a href="#">Contact Us</a></li>
+    </ul>
     <h3>First Section</h3>
     <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Non quam lacus suspendisse faucibus interdum posuere lorem ipsum. Lacus sed viverra tellus in hac. Morbi tincidunt augue interdum velit euismod. Mi quis hendrerit dolor magna eget est lorem ipsum. Enim blandit volutpat maecenas volutpat blandit. Vestibulum lectus mauris ultrices eros in cursus turpis massa. Fames ac turpis egestas integer eget. Sed vulputate mi sit amet. Phasellus vestibulum lorem sed risus ultricies tristique nulla aliquet enim. Pellentesque elit eget gravida cum. Malesuada fames ac turpis egestas maecenas pharetra convallis posuere. Et ultrices neque ornare aenean euismod elementum nisi quis eleifend. Dui vivamus arcu felis bibendum ut tristique. Orci porta non pulvinar neque laoreet suspendisse interdum consectetur. Non enim praesent elementum facilisis leo. Ut placerat orci nulla pellentesque. 
