--- a/assignments/assignment 3/index.html
+++ b/assignments/assignment 3/index.html
@@ -22,7 +22,7 @@
         <main id="page-content">
 <h2> Content </h2>
 <div class="flex-container">
-    <section class="link-section">
+    <section class="content-section">
     <h3>Links</h3>
     <ul>
         <li><a href="https://wiby.me/surprise/">Random Link 1</a></li>
@@ -31,16 +31,14 @@
         <li><a href="https://wiby.me/surprise/">Random Link 4</a></li>
     </ul>
     </section>
-<section class="content-section">
-    
+    <section class="content-section">
     <h3>First Section</h3>
     <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Non quam lacus suspendisse faucibus interdum posuere lorem ipsum. Lacus sed viverra tellus in hac. Morbi tincidunt augue interdum velit euismod. Mi quis hendrerit dolor magna eget est lorem ipsum. Enim blandit volutpat maecenas volutpat blandit. Vestibulum lectus mauris ultrices eros in cursus turpis massa. Fames ac turpis egestas integer eget. Sed vulputate mi sit amet. Phasellus vestibulum lorem sed risus ultricies tristique nulla aliquet enim. Pellentesque elit eget gravida cum. Malesuada fames ac turpis egestas maecenas pharetra convallis posuere. Et ultrices neque ornare aenean euismod elementum nisi quis eleifend. Dui vivamus arcu felis bibendum ut tristique. Orci porta non pulvinar neque laoreet suspendisse interdum consectetur. Non enim praesent elementum facilisis leo. Ut placerat orci nulla pellentesque. 
     </p>
 </section>
-<section class="content-section">
-    <h3>Second Section</h3>
-    <p>Scelerisque eleifend donec pretium vulputate sapien. Arcu ac tortor dignissim convallis aenean. Sed tempus urna et pharetra pharetra. Rutrum tellus pellentesque eu tincidunt tortor. Placerat vestibulum lectus mauris ultrices eros in cursus turpis massa. Ipsum consequat nisl vel pretium lectus quam. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus et. Mattis aliquam faucibus purus in massa tempor nec. Urna porttitor rhoncus dolor purus non enim praesent elementum facilisis. Tellus pellentesque eu tincidunt tortor aliquam. A pellentesque sit amet porttitor eget dolor.</p>
+<section class="bottom-content">
+
 </section>
 </div>
         </main>
