--- a/assignments/assignment 3/index.html
+++ b/assignments/assignment 3/index.html
@@ -36,6 +36,18 @@
     </p>
 </section>
 <section class="bottom-content">
+    <section>
+<h2>Title 1</h2>
+    </section>
+    <section>
+<h2>Title 2</h2>
+    </section>
+    <section>
+<h2>Title 3</h2>
+    </section>
+    <section>
+<h2>Title 4</h2>
+    </section>
 </section>
 </div>
         </main>
