--- a/assignments/assignment 3/index.html
+++ b/assignments/assignment 3/index.html
@@ -38,24 +38,28 @@
 <div class="bottom-content">
     <section class="bottom-content">
 <h2>Title 1</h2>
+<img src="images/placeholder.gif"/>
 <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tellus sapien, interdum a enim id, fermentum ornare elit. Donec sodales, quam sed rutrum aliquam, lorem velit suscipit ex, at dapibus ipsum lectus in nulla
 </p>
     </section>
     <section class="bottom-content">
 <h2>Title 2</h2>
+<img src="images/placeholder.gif"/>
 <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tellus sapien, interdum a enim id, fermentum ornare elit. Donec sodales, quam sed rutrum aliquam, lorem velit suscipit ex, at dapibus ipsum lectus in nulla
 </p>
     </section>
     <section class="bottom-content">
 <h2>Title 3</h2>
+<img src="images/placeholder.gif"/>
 <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tellus sapien, interdum a enim id, fermentum ornare elit. Donec sodales, quam sed rutrum aliquam, lorem velit suscipit ex, at dapibus ipsum lectus in nulla
 </p>
     </section>
     <section class="bottom-content">
 <h2>Title 4</h2>
+<img src="images/placeholder.gif"/>
 <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tellus sapien, interdum a enim id, fermentum ornare elit. Donec sodales, quam sed rutrum aliquam, lorem velit suscipit ex, at dapibus ipsum lectus in nulla
 </p>
