--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     Using <strong id="big">web technologies</strong> to support client-server computing. Implementation of client-server applications.
 
 </p>
+<div id="layout">
 <h3>
 Assignments
 </h3>
@@ -25,6 +26,7 @@ Assignments
     <a href="assignments/assignment 3/index.html">Assignment 3</a>
 </li>
 </ul> 
+</div>
 </div>
 </body>
 </html>
