--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     </head>
     <body>
         <div id="content">
-   <h1>Csce 242 Web Applications</h1> 
    <h2><b>RJ Lemon</b></h2>
-<p class="special">
-    Using <strong id="big">web technologies</strong> to support client-server computing. Implementation of client-server applications.
+   <div id="center"
+   <h1></h1>Csce 242 Web Applications</h1> 
+   </div>
+
 
 </p>
-<div id="layout">
+<div id="center">
 <h3>
 Assignments
 </h3>
+</div>
 <ul>
 <li>
     <a href="assignments/assignment 1/index.html">Assignment 1</a>
