--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <body>
         <div id="content">
    <h2><b>RJ Lemon</b></h2>
-   <div id="center"
-   <h1></h1>Csce 242 Web Applications</h1> 
+   <div id="center">
+    <h2>Csce 242 Web Applications</h2>
    </div>
 
 
@@ -17,17 +17,12 @@
 Assignments
 </h3>
 </div>
-<ul>
-<li>
-    <a href="assignments/assignment 1/index.html">Assignment 1</a>
-</li>
-<li>
-    <a href="assignments/assignment 2/index.html">Assignment 2</a>
-</li>
-<li>
-    <a href="assignments/assignment 3/index.html">Assignment 3</a>
-</li>
-</ul> 
+<div id="Assignments">
+
+    <a href="assignments/assignment 1/index.html"><img src="images/300x150.gif">Assignment 1-Basic HTML<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora eos natus nostrum! Sunt hic consectetur maxime accusantium beatae atque dicta ipsam ea excepturi. Tempora expedita sint aspernatur iure excepturi amet.</p></a>
+    <a href="assignments/assignment 2/index.html"><img src="images/300x150.gif">Assignment 2-Basic CSS<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia ratione obcaecati ipsa vel odit, fuga neque aliquam consectetur nisi voluptatibus, omnis, doloribus reprehenderit? Blanditiis vel possimus voluptatum, placeat iste consectetur.</p></a>
+    <a href="assignments/assignment 3/index.html"><img src="images/300x150.gif">Assignment 3-Page Layout<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est odit officiis assumenda voluptatem quibusdam cumque distinctio debitis, atque ut tempore! Eius suscipit in quibusdam quam magni quaerat nisi corporis voluptatibus!</p></a>
+</div>   
 </div>
 </div>
 </body>
