--- a/index.html
+++ b/index.html
@@ -18,9 +18,26 @@ Assignments
 </h3>
 
 <div id="Assignments">
-    <a href="assignments/assignment 1/index.html"><img src="images/300x150.gif">Assignment 1-Basic HTML<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora eos natus nostrum! Sunt hic consectetur maxime accusantium beatae atque dicta ipsam ea excepturi. Tempora expedita sint aspernatur iure excepturi amet.</p></a>
-    <a href="assignments/assignment 2/index.html"><img src="images/300x150.gif">Assignment 2-Basic CSS<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia ratione obcaecati ipsa vel odit, fuga neque aliquam consectetur nisi voluptatibus, omnis, doloribus reprehenderit? Blanditiis vel possimus voluptatum, placeat iste consectetur.</p></a>
-    <a href="assignments/assignment 3/index.html"><img src="images/300x150.gif">Assignment 3-Page Layout<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est odit officiis assumenda voluptatem quibusdam cumque distinctio debitis, atque ut tempore! Eius suscipit in quibusdam quam magni quaerat nisi corporis voluptatibus!</p></a>
+    <section>
+        <h2>Assignment 1-Basic HTML</h2>
+        <img src="images/300x150.gif"/>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tellus sapien, interdum a enim id, fermentum ornare elit. Donec sodales, quam sed rutrum aliquam, lorem velit suscipit ex, at dapibus ipsum lectus in nulla
+        </p>
+            </section>
+            <section>
+        <h2>Assignment 2-Basic CSS</h2>
+        <img src="images/300x150.gif"/>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tellus sapien, interdum a enim id, fermentum ornare elit. Donec sodales, quam sed rutrum aliquam, lorem velit suscipit ex, at dapibus ipsum lectus in nulla
+        </p>
+            </section>
+            <section>
+        <h2>Assignment 3-Page Layout</h2>
+        <img src="images/300x150.gif"/>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tellus sapien, interdum a enim id, fermentum ornare elit. Donec sodales, quam sed rutrum aliquam, lorem velit suscipit ex, at dapibus ipsum lectus in nulla
+        </p>
 </div> 
 </div>  
 </div>
