--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ Assignments
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tellus sapien, interdum a enim id, fermentum ornare elit. Donec sodales, quam sed rutrum aliquam, lorem velit suscipit ex, at dapibus ipsum lectus in nulla
         </p>
+        </section>
 </div> 
- 
 </div>
 </div>
 </body>
