--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@ Assignments
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tellus sapien, interdum a enim id, fermentum ornare elit. Donec sodales, quam sed rutrum aliquam, lorem velit suscipit ex, at dapibus ipsum lectus in nulla
         </p>
         </section>
+        <a href="assignments/assignment 1/index.html">Assignment 1</a>
+        <a href="assignments/assignment 2/index.html">Assignment 2</a>
+        <a href="assignments/assignment 3/index.html">Assignment 3</a>
 </div> 
 </div>
 </div>
