--- a/index.html
+++ b/index.html
@@ -20,28 +20,26 @@ Assignments
 <div id="Assignments">
     <section>
         <h2>Assignment 1-Basic HTML</h2>
-        <img src="images/300x150.gif"/>
+        <a href="assignments/assignment 1/index.html"><img src="images/ss1.png"/></a>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tellus sapien, interdum a enim id, fermentum ornare elit. Donec sodales, quam sed rutrum aliquam, lorem velit suscipit ex, at dapibus ipsum lectus in nulla
         </p>
             </section>
             <section>
         <h2>Assignment 2-Basic CSS</h2>
-        <img src="images/300x150.gif"/>
+        <a href="assignments/assignment 2/index.html"><img src="images/ss2"/></a>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tellus sapien, interdum a enim id, fermentum ornare elit. Donec sodales, quam sed rutrum aliquam, lorem velit suscipit ex, at dapibus ipsum lectus in nulla
         </p>
             </section>
             <section>
         <h2>Assignment 3-Page Layout</h2>
-        <img src="images/300x150.gif"/>
+        <a href="assignments/assignment 3/index.html"><img src="images/ss3"/></a>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tellus sapien, interdum a enim id, fermentum ornare elit. Donec sodales, quam sed rutrum aliquam, lorem velit suscipit ex, at dapibus ipsum lectus in nulla
         </p>
         </section>
-        <a href="assignments/assignment 1/index.html">Assignment 1</a>
-        <a href="assignments/assignment 2/index.html">Assignment 2</a>
-        <a href="assignments/assignment 3/index.html">Assignment 3</a>
+           
 </div> 
 </div>
 </div>
