--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@ Assignments
             </section>
             <section>
         <h2>Assignment 2-Basic CSS</h2>
-        <a href="assignments/assignment 2/index.html"><img src="images/ss2"/></a>
+        <a href="assignments/assignment 2/index.html"><img src="images/ss2.png"/></a>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tellus sapien, interdum a enim id, fermentum ornare elit. Donec sodales, quam sed rutrum aliquam, lorem velit suscipit ex, at dapibus ipsum lectus in nulla
         </p>
             </section>
             <section>
         <h2>Assignment 3-Page Layout</h2>
-        <a href="assignments/assignment 3/index.html"><img src="images/ss3"/></a>
+        <a href="assignments/assignment 3/index.html"><img src="images/ss3.png"/></a>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tellus sapien, interdum a enim id, fermentum ornare elit. Donec sodales, quam sed rutrum aliquam, lorem velit suscipit ex, at dapibus ipsum lectus in nulla
         </p>
