--- a/index.html
+++ b/index.html
@@ -22,22 +22,21 @@ Assignments
         <h2>Assignment 1-Basic HTML</h2>
         <a href="assignments/assignment 1/index.html"><img src="images/ss1.png"/></a>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tellus sapien, interdum a enim id, fermentum ornare elit. Donec sodales, quam sed rutrum aliquam, lorem velit suscipit ex, at dapibus ipsum lectus in nulla
+            Using basic HTML to create a webpage
         </p>
             </section>
             <section>
         <h2>Assignment 2-Basic CSS</h2>
         <a href="assignments/assignment 2/index.html"><img src="images/ss2.png"/></a>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tellus sapien, interdum a enim id, fermentum ornare elit. Donec sodales, quam sed rutrum aliquam, lorem velit suscipit ex, at dapibus ipsum lectus in nulla
+           Using basic CSS to style a webpage
         </p>
             </section>
             <section>
         <h2>Assignment 3-Page Layout</h2>
         <a href="assignments/assignment 3/index.html"><img src="images/ss3.png"/></a>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tellus sapien, interdum a enim id, fermentum ornare elit. Donec sodales, quam sed rutrum aliquam, lorem velit suscipit ex, at dapibus ipsum lectus in nulla
-        </p>
+            Creating a page layout using flexbox and grid
         </section>
            
 </div> 
