--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@ Assignments
         <p>
             Creating a page layout using flexbox and grid
         </section>
+        <section>
+            <h2>Assignment 4-Responsive Design</h2>
+            <a href="assignments/assignment 4/index.html"><img src="images/ss3.png"/></a>
+            <p>
+                Creating a responsive design using media queries
+            </p>
+        </section>
            
 </div> 
 </div>
