--- a/assignments/assignment 4/index.html
+++ b/assignments/assignment 4/index.html
@@ -24,8 +24,8 @@
             <section id="Lowercontent">
             <div id="rowrow">
             <div id="columnof5">
+            <div id="highlightlist"></div>
             <h2>Department Highlights</h2>
-            <div id="highlightlist">
             <a href="#">
             <article>
             <img src="images/smaller pics.gif" alt="empty">
