--- a/assignments/assignment 4/index.html
+++ b/assignments/assignment 4/index.html
@@ -26,7 +26,7 @@
             <div id="rowrow">
             <div id="columnof5">
             <div id="highlightlist"></div>
-            <h2>Department Highlights</h2>
+            <h2 id="DepartmentHI">Department Highlights</h2>
             <a href="#">
             <article>
             <img src="images/smaller pics.gif" alt="empty">
