--- a/assignments/assignment 4/index.html
+++ b/assignments/assignment 4/index.html
@@ -28,7 +28,7 @@
             <div id="highlightlist"></div>
             <h2 id="DepartmentHI">Department Highlights</h2>
             <a href="#">
-            <article>
+            <article id="a1">
             <img src="images/smaller pics.gif" alt="empty">
             <div id="text">
                 <h3>
@@ -44,7 +44,7 @@
             </a>
 
             <a href="#">
-                <article>
+                <article id="a2">
                 <img src="images/smaller pics.gif" alt="empty">
                 <div id="text">
                     <h3>
@@ -60,7 +60,7 @@
                 </a>
 
                 <a href="#">
-                    <article>
+                    <article id="a3">
                     <img src="images/smaller pics.gif" alt="empty">
                     <div id="text">
                         <h3>
@@ -76,7 +76,7 @@
                     </a>
 
                     <a href="#">
-                        <article>
+                        <article id="a4">
                         <img src="images/smaller pics.gif" alt="empty">
                         <div id="text">
                             <h3>
@@ -92,7 +92,7 @@
                         </a>
 
                         <a href="#">
-                            <article>
+                            <article id="a5">
                             <img src="images/smaller pics.gif" alt="empty">
                             <div id="text">
                                 <h3>
