--- a/assignments/assignment 4/index.html
+++ b/assignments/assignment 4/index.html
@@ -115,8 +115,10 @@
                             <div id="group">
                                 <h1 id="glancetitle"> Computer Science and Engineering </h1>
                                 <h2 id="glanchead">2024 at a glance</h2>
-                               <p id="glancecontent"><b>2024!!</b>"Text Text Text"</p>
-                                <p id="glancecontent"><b>2025!!</b>"Type Type Type"</p>
+                               <p id="glancecontent"><b>2024!!</b></p>
+                               <p>Text Text Text</p>
+                                <p id="glancecontent"><b>2025!!</b></p>
+                                <p>Type Type Type</p>
                         </div>
                     </aside>
                     
