--- a/assignments/assignment 4/index.html
+++ b/assignments/assignment 4/index.html
@@ -146,7 +146,7 @@
             <footer>
                 <h1>
                     <sitename>
-                        "College of" <strong> Engineering and Computing</strong>
+                        College of <strong> Engineering and Computing</strong>
                     </sitename>
                 </h1>
                 <ul id="bottom links">
