--- a/assignments/assignment 4/index.html
+++ b/assignments/assignment 4/index.html
@@ -142,8 +142,7 @@
                     </div>
                 </section>
             </div>
-            <div id="footer">
-            <footer>
+            <footer id="footer">
                 <h1>
                     <sitename>
                         College of <strong> Engineering and Computing</strong>
@@ -164,7 +163,6 @@
                 </li> 
                 </ul>
             </footer>  
-            </div>
            <footer id="logofooter">
             <nav id="logofoot">
                 <div id="sitemap">
