--- a/assignments/assignment 4/index.html
+++ b/assignments/assignment 4/index.html
@@ -212,7 +212,7 @@
                       
                 </div>
             </nav>
-            <nav class="hamburger-menu">
+            <nav id="hamburger-menu">
                 <a href="#">College of Engineering and Computing</a>
                 <a href="#">News and Events</a>
                 <a href="#">Academics</a>
