--- a/assignments/assignment 4/index.html
+++ b/assignments/assignment 4/index.html
@@ -7,6 +7,9 @@
        <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
+        <section id =tiptop>
+            <h1>University of south carolina</h1>
+        </section>
         <section id="firsthead">
             <h1>College of Engineering and Computing</h1>
         </section>
