--- a/assignments/assignment 4/index.html
+++ b/assignments/assignment 4/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <section id =tiptop>
-            <h1>University of south carolina</h1>
+            <h1>University of South Carolina</h1>
         </section>
         <section id="firsthead">
             <h1>College of Engineering and Computing</h1>
