--- a/index.html
+++ b/index.html
@@ -39,14 +39,30 @@ Assignments
             Creating a page layout using flexbox and grid
         </section>
         <section>
-            <h2>Assignment 4-Responsive Design</h2>
-            <a href="assignments/assignment 4/index.html"><img src="images/ss3.png"/></a>
+            <h2>Assignment 4-Page recreation</h2>
+            <a href="assignments/assignment 4/index.html"><img src="images/ss4.png"/></a>
             <p>
-                Creating a responsive design using media queries
+                Recreating the usc webpage
             </p>
         </section>
-           
 </div> 
+<div id="Projects">
+    <h2>Projects</h2>
+    <section>
+        <h2>Project-Part 1</h2>
+        <a href="projects/part1/index.html"><img src="images/proj1.png"/></a>
+        <p>
+            Creating a webpage idea
+        </p>
+    </section>
+    <section>
+        <h2>Project-Part 2 </h2>
+        <a href="projects/part2/index.html"><img src="images/proj1.png"/></a>
+        <p>
+            Creating a wireframe for the webpage
+        </p>
+    </section>
+</div>
 </div>
 </div>
 </body>
