--- a/index.html
+++ b/index.html
@@ -46,8 +46,11 @@ Assignments
             </p>
         </section>
 </div> 
+<div id="center">
+<h2>Projects</h2>
+</div>
 <div id="Projects">
-    <h2>Projects</h2>
+    
     <section>
         <h2>Project-Part 1</h2>
         <a href="projects/part1/index.html"><img src="images/proj1.png"/></a>
