--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Assignments
     
     <section>
         <h2>Project-Part 1</h2>
-        <a href="projects/part1/index.html"><img src="images/proj1.png"/></a>
+        <a href="projects/part1/The name of your website.pdf"><img src="images/proj1.png"/></a>
         <p>
             Creating a webpage idea
         </p>
