--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@ Assignments
                 Recreating the usc webpage
             </p>
         </section>
+        <section>
+            <h2>Assignment 7-Java,Buttons,Functions</h2>
+            <a href="assignments/assignment 7/index.html"><img src="images/ss4.png"/></a>
+            <p>
+                Intro to JavaScript
+            </p>
+        </section>
 </div> 
 <div id="center">
 <h2>Projects</h2>
