--- a/assignments/assignment 7/index.html
+++ b/assignments/assignment 7/index.html
@@ -10,7 +10,7 @@
     </div>
     </body>
     <footer id="main-footer">
-        <p>
+        <p id="center">
             &copy; reallyrj.com
         </p>
                 </footer>
