--- a/assignments/assignment 7/index.html
+++ b/assignments/assignment 7/index.html
@@ -2,12 +2,29 @@
 <html lang="eng">
     <head>
        <link rel="stylesheet" href="styles.css"/>
+       <script src="scripts.js"></script>
     </head>
     <body>
+    <div id="flexbox">
     <div id="head">
     <h1 id="center">Assignment 7</h1>
     <h2 id="center">Introduction to JavaScript</h2>
     </div>
+    <div id="changeimage">
+        <h2 id="center">Change Image </h2>
+        <img src="images/200x200(1).gif">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis officia obcaecati officiis, voluptate quaerat enim pariatur repudiandae vero dolor sed dolorum sint reprehenderit ipsam autem voluptatibus. Delectus aliquid laudantium vero.</p>
+    </div>
+    <div id="slider">
+        <h2 id="center">Slider Rotate</h2>
+        <img src="images/200x200(1).gif">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis molestiae doloribus architecto, dignissimos, voluptatibus vero suscipit quia dolore ab obcaecati incidunt fugit eaque necessitatibus autem voluptate reprehenderit asperiores porro deserunt.</p>
+    </div>
+<div id="stars">
+    <h2 id="center">Stars</h2>
+</div>
+</div>
+
     </body>
     <footer id="main-footer">
         <p id="center">
