--- a/assignments/assignment 7/index.html
+++ b/assignments/assignment 7/index.html
@@ -12,19 +12,18 @@
     </div>
     <div id="changeimage">
         <h2 id="center">Change Image </h2>
-        <img id="center" src="images/200x200(1).gif">
+        <img src="images/200x200(1).gif">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis officia obcaecati officiis, voluptate quaerat enim pariatur repudiandae vero dolor sed dolorum sint reprehenderit ipsam autem voluptatibus. Delectus aliquid laudantium vero.</p>
     </div>
     <div id="slider">
         <h2 id="center">Slider Rotate</h2>
-        <img id="center" src="images/200x200(1).gif">
+        <img src="images/200x200(1).gif">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis molestiae doloribus architecto, dignissimos, voluptatibus vero suscipit quia dolore ab obcaecati incidunt fugit eaque necessitatibus autem voluptate reprehenderit asperiores porro deserunt.</p>
     </div>
 <div id="stars">
     <h2 id="center">Stars</h2>
 </div>
 </div>
-
     </body>
     <footer id="main-footer">
         <p id="center">
