--- a/assignments/assignment 7/index.html
+++ b/assignments/assignment 7/index.html
@@ -22,6 +22,7 @@
     </div>
 <div id="stars">
     <h2 id="center">Stars</h2>
+    <button id="addstars">Create Stars</button>
 </div>
 </div>
     </body>
