--- a/assignments/assignment 7/index.html
+++ b/assignments/assignment 7/index.html
@@ -2,7 +2,7 @@
 <html lang="eng">
     <head>
        <link rel="stylesheet" href="styles.css"/>
-       <script src="scripts.js"></script>
+       <script src="script.js"></script>
     </head>
     <body>
     <div id="flexbox">
@@ -12,7 +12,7 @@
     </div>
     <div id="changeimage">
         <h2 id="center">Change Image </h2>
-        <img src="images/200x200(1).gif">
+        <img src="images/200x200(1).gif" id="imageclick">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis officia obcaecati officiis, voluptate quaerat enim pariatur repudiandae vero dolor sed dolorum sint reprehenderit ipsam autem voluptatibus. Delectus aliquid laudantium vero.</p>
     </div>
     <div id="slider">
