--- a/assignments/assignment 7/index.html
+++ b/assignments/assignment 7/index.html
@@ -12,7 +12,7 @@
     </div>
     <div id="changeimage">
         <h2 id="center">Change Image </h2>
-        <img src="images/200x200(1).gif" id="image">
+        <img src="images/200x200(1).gif" id="switchimage">
         <button id="changeimage">Change Image</button>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis officia obcaecati officiis, voluptate quaerat enim pariatur repudiandae vero dolor sed dolorum sint reprehenderit ipsam autem voluptatibus. Delectus aliquid laudantium vero.</p>
     </div>
