--- a/assignments/assignment 7/index.html
+++ b/assignments/assignment 7/index.html
@@ -18,7 +18,8 @@
     </div>
     <div id="slider">
         <h2 id="center">Slider Rotate</h2>
-        <img src="images/200x200(1).gif">
+        <img src="images/200x200(1).gif" id="rotateimage" id="imageslider">
+        <input type="range" id="slider" min="0" max="360" value="0">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis molestiae doloribus architecto, dignissimos, voluptatibus vero suscipit quia dolore ab obcaecati incidunt fugit eaque necessitatibus autem voluptate reprehenderit asperiores porro deserunt.</p>
     </div>
 <div id="stars">
