--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@ Assignments
             Creating a wireframe for the webpage
         </p>
     </section>
+    <section>
+        <h2>Project-Part 3</h2>
+        <a href="projects/part3/index.html"><img src="images/proj2.png"/></a>
+        <p>
+            Creating wireframes
+        </p>
+    </section>
 </div>
 </div>
 </div>
