--- a/projects/part3/drops.html
+++ b/projects/part3/drops.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head> 
-<body id="Home">
-    <h1>New Releases</h1>
+<body id="Drops">
+    <h1>New Drops</h1>
     <nav id="main-nav">
         <div id="hamburger">
             <div></div>
@@ -15,7 +15,7 @@
             <div></div>
             <div></div>
         </div>
-        <ul id="nav items" class="flex-container hide">
+        <ul id="nav-items" class="flex-container hide">
             <a href="index.html"><li job="nav">Home</li></a>
             <a href="drops.html"><li>Drops</li></a>
             <a href="artist.html"><li>Upcoming Artist</li></a>
@@ -23,5 +23,6 @@
             <a href="news.html"><li>News</li></a>
         </ul>
     </nav>
+    <script src="script.js"></script>
 </body>
 </html>
