--- a/projects/part3/favorites.html
+++ b/projects/part3/favorites.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head> 
-<body id="Home">
+<body id="Favorites">
     <h1>Our Favorites</h1>
     <nav id="main-nav">
         <div id="hamburger">
@@ -15,7 +15,7 @@
             <div></div>
             <div></div>
         </div>
-        <ul id="nav items" class="flex-container hide">
+        <ul id="nav-items" class="flex-container hide">
             <a href="index.html"><li job="nav">Home</li></a>
             <a href="drops.html"><li>Drops</li></a>
             <a href="artist.html"><li>Upcoming Artist</li></a>
@@ -23,5 +23,6 @@
             <a href="news.html"><li>News</li></a>
         </ul>
     </nav>
+    <script src="script.js"></script>
 </body>
 </html>
