--- a/projects/part3/index.html
+++ b/projects/part3/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <Title>Underground Wiki</Title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"/>
     <script src="script.js"></script>
 </head> 
 <body id="Home">
