--- a/projects/part3/index.html
+++ b/projects/part3/index.html
@@ -24,5 +24,40 @@
         </ul>
     </nav>
     <script src="script.js"></script>
+    
+    <h2 id="center">Latest Video</h2>
+    <img src="images/200x200(1).gif" alt="Latest Video"/>
+    <h2 id="center">Trending Topics</h2>
+    <div class="Topics">
+    <section>
+        <img src="images/200x200(1).gif" alt=""/>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+    </section>
+    <section>
+        <img src="images/200x200(1).gif" alt=""/>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+    </section>
+    <section>
+        <img src="images/200x200(1).gif" alt=""/>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+    </section>
+    <section>
+        <img src="images/200x200(1).gif" alt=""/>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+    </section>
+    <section>
+        <img src="images/200x200(1).gif" alt=""/>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+    </section>
+    <section>
+        <img src="images/200x200(1).gif" alt=""/>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+    </section>
+    <section>
+        <img src="images/200x200(1).gif" alt=""/>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+    </section>
+
+
 </body>
 </html>
