--- a/projects/part3/artist.html
+++ b/projects/part3/artist.html
@@ -24,5 +24,26 @@
         </ul>
     </nav>
     <script src="script.js"></script>
+    <h2 id="center">Artist Spotlight</h2>
+    <img src="images/200x200(1).gif" alt="Artist Spotlight"/>
+    <div id="Upcoming">
+        <h3>Upcoming Artist</h3>
+        <section>
+            <img src="images/200x200(1).gif" alt=""/>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+        </section>
+        <section>
+            <img src="images/200x200(1).gif" alt=""/>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+        </section>
+        <section>
+            <img src="images/200x200(1).gif" alt=""/>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+        </section>
+        <section>
+            <img src="images/200x200(1).gif" alt=""/>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+        </section>
+    </div>
 </body>
 </html>
