--- a/projects/part3/artist.html
+++ b/projects/part3/artist.html
@@ -26,6 +26,7 @@
     <script src="script.js"></script>
     <h2 id="center">Artist Spotlight</h2>
     <img src="images/200x200(1).gif" alt="Artist Spotlight"/>
+    <p>Lorem Ipsum</p>
     <div id="Upcoming">
         <h3>Upcoming Artist</h3>
         <section>
