--- a/projects/part3/news.html
+++ b/projects/part3/news.html
@@ -24,5 +24,36 @@
         </ul>
     </nav>
     <script src="script.js"></script>
+    <h2>Underground News</h2>
+    <section>
+        <img src="images/200x200(1).gif" alt=""/>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+    </section>
+    <section>
+        <img src="images/200x200(1).gif" alt=""/>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+    </section>
+    <section>
+        <img src="images/200x200(1).gif" alt=""/>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+    </section>
+    <section>
+        <img src="images/200x200(1).gif" alt=""/>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+    </section>
+    <section>
+        <img src="images/200x200(1).gif" alt=""/>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+    </section>
+    <section>
+        <img src="images/200x200(1).gif" alt=""/>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+    </section>
+    <section>
+        <img src="images/200x200(1).gif" alt=""/>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
+    </section>
+    <p>For more news find us here</p>
+    <a href="#"><img src="images/200x200(1).gif"></a>
 </body>
 </html>
