--- a/projects/part3/news.html
+++ b/projects/part3/news.html
@@ -6,7 +6,7 @@
     <script src="script.js"></script>
 </head> 
 <body id="News">
-    <h1>Underground News</h1>
+    <h1 id="center">Underground Wiki</h1>
     <nav id="main-nav">
         <div id="hamburger">
             <div></div>
@@ -24,7 +24,7 @@
         </ul>
     </nav>
     <script src="script.js"></script>
-    <h2>Underground News</h2>
+    <h2 id="center">Underground News</h2>
     <section>
         <img src="images/200x200(1).gif" alt=""/>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
@@ -53,7 +53,7 @@
         <img src="images/200x200(1).gif" alt=""/>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem possimus adipisci quod saepe optio quidem ea velit rerum, mollitia aperiam ad? Quia quidem totam, dolores id nostrum consequatur sunt maiores!</p>
     </section>
-    <p>For more news find us here</p>
+    <p id="center">For more news find us here</p>
     <a href="#"><img src="images/200x200(1).gif"></a>
 </body>
 </html>
