--- a/projects/part3/favorites.html
+++ b/projects/part3/favorites.html
@@ -6,7 +6,7 @@
     <script src="script.js"></script>
 </head> 
 <body id="Favorites">
-    <h1>Our Favorites</h1>
+    <h1 id="center">Underground Wiki</h1>
     <nav id="main-nav">
         <div id="hamburger">
             <div></div>
